syntax = "proto3";

option java_package="com.waben.stock.futuresgateway.yisheng.common.protobuf";
option java_outer_classname = "FuturesQuoteFullData";

message FuturesQuoteFullDataBase {
  	string time = 1;
	string commodityNo = 2;
	string contractNo = 3;
	string bidPrice = 4;
	string bidPrice2 = 5;
	string bidPrice3 = 6;
	string bidPrice4 = 7;
	string bidPrice5 = 8;
	string bidPrice6 = 9;
	string bidPrice7 = 10;
	string bidPrice8 = 11;
	string bidPrice9 = 12;
	string bidPrice10 = 13;
	int64 bidSize = 14;
	int64 bidSize2 = 15;
	int64 bidSize3 = 16;
	int64 bidSize4 = 17;
	int64 bidSize5 = 18;
	int64 bidSize6 = 19;
	int64 bidSize7 = 20;
	int64 bidSize8 = 21;
	int64 bidSize9 = 22;
	int64 bidSize10 = 23;
	string askPrice = 24;
	string askPrice2 = 25;
	string askPrice3 = 26;
	string askPrice4 = 27;
	string askPrice5 = 28;
	string askPrice6 = 29;
	string askPrice7 = 30;
	string askPrice8 = 31;
	string askPrice9 = 32;
	string askPrice10 = 33;
	int64 askSize = 34;
	int64 askSize2 = 35;
	int64 askSize3 = 36;
	int64 askSize4 = 37;
	int64 askSize5 = 38;
	int64 askSize6 = 39;
	int64 askSize7 = 40;
	int64 askSize8 = 41;
	int64 askSize9 = 42;
	int64 askSize10 = 43;
	string lastPrice = 44;
	int64 lastSize = 45;
	string openPrice = 46;
	string highPrice = 47;
	string lowPrice = 48;
	string nowClosePrice = 49;
	string closePrice = 50;
	int64 volume = 51;
	int64 totalVolume = 52;
	string preSettlePrice = 53;
	int64 totalQty = 54;
	int64 positionQty = 55;
	int64 prePositionQty = 56;
	
}